Update notebooks/exercises and notebooks/solutions

--- a/notebooks/solutions/01-data-ingestion.ipynb
+++ b/notebooks/solutions/01-data-ingestion.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de744d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "43ff8aab",
    "metadata": {},
@@ -64,7 +74,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "productlines = load_table_df(\"productlines\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead297b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    productlines\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/productlines.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -102,7 +128,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "products = load_table_df(\"products\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2b1936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    products\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/products.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -140,7 +182,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "offices = load_table_df(\"offices\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea27a2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    offices\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/offices.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -178,7 +236,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "employees = load_table_df(\"employees\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a942cbd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    employees\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/employees.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -216,7 +290,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "customers = load_table_df(\"customers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0feac8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    customers\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/customers.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -254,7 +344,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "payments = load_table_df(\"payments\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30b007bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    payments\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/payments.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -292,7 +398,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "orders = load_table_df(\"orders\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de608365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    orders\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/orders.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -312,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Orders was not loaded complete\""
+    "assert row_count == 326, \"Orders was not loaded complete\""
    ]
   },
   {
@@ -330,7 +452,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "orderdetails = load_table_df(\"orderdetails\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb438b35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    orderdetails\n",
+    "        .write\n",
+    "        .format(\"parquet\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .save(\"s3a://datalake/exercises/raw/classicmodels/orderdetails.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -350,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Orderdetails was not loaded complete\""
+    "assert row_count == 2996, \"Orderdetails was not loaded complete\""
    ]
   }
  ],
