--- a/notebooks/0306-spark-dataframe-groupby.ipynb
+++ b/notebooks/0306-spark-dataframe-groupby.ipynb
@@ -12,10 +12,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3349ee4a",
+   "id": "8cc17238",
    "metadata": {},
    "source": [
-    "# DataFrame OrderBy"
+    "# Data Frame GroupBy"
    ]
   },
   {
@@ -66,143 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df4bda65",
+   "id": "62e93e18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4d70c2a",
-   "metadata": {},
-   "source": [
-    "Because `orderBy` and `sort` are aliases, they are both interchanged in real usage."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e7d4f9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(\"department\", \"state\").show(truncate=False) # Use ascending order by default"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21274f23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.orderBy(\"department\", \"state\").show(truncate=False); # Use orderBy instead"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdf6754b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(F.col(\"department\"), F.col(\"state\")).show(truncate=False) # Use col() to reference Column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5a67f07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.orderBy(F.col(\"department\"), F.col(\"state\")).show(truncate=False) # Use orderBy instead"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22b1fa08",
-   "metadata": {},
-   "source": [
-    "## Order by ascending"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82188934",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(df.department.asc(), df.state.asc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a75872b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(F.col(\"department\").asc(), F.col(\"state\").asc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b22fd3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.orderBy(F.col(\"department\").asc(), F.col(\"state\").asc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfe9d2ff",
-   "metadata": {},
-   "source": [
-    "## Order by mixing ascending and descending"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fec9eb6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(df.department.asc(),df.state.desc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "520a592e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort(F.col(\"department\").asc(), F.col(\"state\").desc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f89bf676",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.orderBy(F.col(\"department\").asc(), F.col(\"state\").desc()).show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16382fa0",
-   "metadata": {},
-   "source": [
-    "# Data Frame GroupBy"
+    "df.show(truncate=True)"
    ]
   },
   {
@@ -210,17 +78,27 @@
    "id": "4c5ffab6",
    "metadata": {},
    "source": [
-    "`groupBy` has an alias `groupBy`. Choose them as you like."
+    "To aggregate dataframe, we will use `groupBy()`. `groupBy` has an alias `groupBy`. Choose them as you like."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdd9681",
+   "id": "2ea9f50a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.show(truncate=True)"
+    "df.groupBy(\"department\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980b8dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"department\")"
    ]
   },
   {
@@ -486,7 +364,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.select(F.collect_list(\"salary\")).show(truncate=False)"
+    "df.select(F.collect_list(\"salary\").alias(\"salaries\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "303a4e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupBy(\"state\").agg(F.collect_list(\"salary\").alias(\"salaries\")).show(truncate=False)"
    ]
   },
   {
