--- a/notebooks/0202-spark-rdd-basic.ipynb
+++ b/notebooks/0202-spark-rdd-basic.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff0d313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f79a646",
    "metadata": {},
