--- a/notebooks/exercises/03-explore-data.ipynb
+++ b/notebooks/exercises/03-explore-data.ipynb
@@ -19,12 +19,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68cb7d56",
+   "cell_type": "markdown",
+   "id": "a4d0392a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- ลูกค้า ที่ใช้จ่ายมากที่สุดในปีนั้น\n",
+    "- ลูกค้า ที่ใช้จ่ายมากที่สุดในแต่ละเดือนของปีนั้น\n",
+    "- ลูกค้า ที่ใช้จ่ายมากที่สุดตั้งแต่เริ่มดำเนินกิจการ\n",
+    "\n",
+    "- ลูกค้า ที่มีเครดิตสูงสุด\n",
+    "- รายจ่ายเฉลี่ยของลูกค้าแต่ละคน\n",
+    "- บริษัทมี office อยู่กี่แห่ง\n",
+    "- บริษัทมี office ในประเทศไหนมากที่สุด\n",
+    "- มี office ที่ไม่มีพนักงานมั้ย ? ถ้ามีคือที่ไหน\n",
+    "- หาจำนวนพนักงานในแต่ละ office\n",
+    "- office ไหนมีพนักงานมากที่สุด\n",
+    "\n",
+    "- product ไหนมีจำนวน order สูงสุด\n",
+    "- product ไหนมียอดขายสูงสุด"
+   ]
   }
  ],
  "metadata": {
