--- a/notebooks/exercises/01-data-ingestion.ipynb
+++ b/notebooks/exercises/01-data-ingestion.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de744d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "43ff8aab",
    "metadata": {},
@@ -60,17 +70,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e420c46",
+   "id": "e596c4fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09fdce4",
+   "id": "8e420c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 7, \"Productlines was not loaded complete\""
+    "assert row_count == 7, \"Productlines was not loaded complete.\"\n",
+    "\n",
+    "print(\"Productlines was loaded complete.\")"
    ]
   },
   {
@@ -102,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -122,7 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 110, \"Products was not loaded complete\""
+    "assert row_count == 110, \"Products was not loaded complete.\"\n",
+    "\n",
+    "print(\"Products was loaded complete.\")"
    ]
   },
   {
@@ -140,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -160,7 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 7, \"Offices was not loaded complete\""
+    "assert row_count == 7, \"Offices was not loaded complete.\"\n",
+    "\n",
+    "print(\"Offices was loaded complete.\")"
    ]
   },
   {
@@ -178,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -198,7 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 23, \"Employees was not loaded complete\""
+    "assert row_count == 23, \"Employees was not loaded complete.\"\n",
+    "\n",
+    "print(\"Employees was loaded complete.\")"
    ]
   },
   {
@@ -216,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -236,7 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 122, \"Customers was not loaded complete\""
+    "assert row_count == 122, \"Customers was not loaded complete.\"\n",
+    "\n",
+    "print(\"Customers was loaded complete.\")"
    ]
   },
   {
@@ -254,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -274,7 +294,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Payments was not loaded complete\""
+    "assert row_count == 273, \"Payments was not loaded complete.\"\n",
+    "\n",
+    "print(\"Payments was loaded complete.\")"
    ]
   },
   {
@@ -292,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -312,7 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Orders was not loaded complete\""
+    "assert row_count == 326, \"Orders was not loaded complete.\"\n",
+    "\n",
+    "print(\"Orders was loaded complete.\")"
    ]
   },
   {
@@ -330,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "# CODE HERE"
    ]
   },
   {
@@ -350,7 +374,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Orderdetails was not loaded complete\""
+    "assert row_count == 2996, \"Orderdetails was not loaded complete\"\n",
+    "\n",
+    "print(\"Orderdetails was loaded complete.\")"
    ]
   }
  ],
