--- a/notebooks/solutions/01-data-ingestion.ipynb
+++ b/notebooks/solutions/01-data-ingestion.ipynb
@@ -110,7 +110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 7, \"Productlines was not loaded complete\""
+    "assert row_count == 7, \"Productlines was not loaded complete.\"\n",
+    "\n",
+    "print(\"Productlines was loaded complete.\")"
    ]
   },
   {
@@ -164,7 +166,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 110, \"Products was not loaded complete\""
+    "assert row_count == 110, \"Products was not loaded complete.\"\n",
+    "\n",
+    "print(\"Products was loaded complete.\")"
    ]
   },
   {
@@ -218,7 +222,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 7, \"Offices was not loaded complete\""
+    "assert row_count == 7, \"Offices was not loaded complete.\"\n",
+    "\n",
+    "print(\"Offices was loaded complete.\")"
    ]
   },
   {
@@ -272,7 +278,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 23, \"Employees was not loaded complete\""
+    "assert row_count == 23, \"Employees was not loaded complete.\"\n",
+    "\n",
+    "print(\"Employees was loaded complete.\")"
    ]
   },
   {
@@ -326,7 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 122, \"Customers was not loaded complete\""
+    "assert row_count == 122, \"Customers was not loaded complete.\"\n",
+    "\n",
+    "print(\"Customers was loaded complete.\")"
    ]
   },
   {
@@ -380,7 +390,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Payments was not loaded complete\""
+    "assert row_count == 273, \"Payments was not loaded complete.\"\n",
+    "\n",
+    "print(\"Payments was loaded complete.\")"
    ]
   },
   {
@@ -434,7 +446,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 326, \"Orders was not loaded complete\""
+    "assert row_count == 326, \"Orders was not loaded complete.\"\n",
+    "\n",
+    "print(\"Orders was loaded complete.\")"
    ]
   },
   {
@@ -488,7 +502,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 2996, \"Orderdetails was not loaded complete\""
+    "assert row_count == 2996, \"Orderdetails was not loaded complete\"\n",
+    "\n",
+    "print(\"Orderdetails was loaded complete.\")"
    ]
   }
  ],
